--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,28 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "./typography.css";
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  p {
+    @apply text-24 leading-40 mb-8;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .concepts-article h2 {
+    @apply text-20 font-500 leading-24 uppercase opacity-50 mb-3 mt-16;
+  }
+
+  .concepts-article h2:first-of-type {
+    margin-top: 0;
+  }
+
+  .concepts-article h3 {
+    @apply font-yeseva text-48 leading-55 text-blue mb-8;
+  }
+
+  .concepts-article h4 {
+    @apply text-20 font-600 leading-24 uppercase mb-3;
+  }
 }
