--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,4 +35,18 @@
   .concepts-example p {
     @apply text-16 leading-32;
   }
+
+  .assessment button {
+    @apply enabled:cursor-pointer mx-auto px-4 py-2 rounded-md border enabled:shadow-sm disabled:bg-offwhite bg-white border-light-gray hover:enabled:bg-light-blue;
+  }
+
+  .assessment button[data-incorrect="true"] {
+    @apply bg-light-red border-red;
+  }
+  
+  .assessment button[data-correct="true"] {
+    @apply bg-light-green border-green;
+  }
+    
+  
 }
