--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,6 +43,10 @@
     @apply text-20 leading-32 mb-0;
   }
 
+  .concepts-box a {
+    @apply font-500;
+  }
+
   .concepts-example p {
     @apply text-16 leading-32;
   }
