--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,6 +42,18 @@
   .concepts-box p {
     @apply text-20 leading-32 mb-0;
   }
+  
+  .pool-example p {
+    @apply tracking-tight text-20 mb-2;
+  }
+
+  .pool-example h4 {
+    @apply text-24 mb-4;
+  }
+
+  .example-scenario p {
+    @apply tracking-tight text-18 leading-32 mb-0;
+  }
 
   .concepts-box a {
     @apply font-500;
